refractored code and added classes

--- a/src/main/scala/com/knoldus/docker/testdockerfile/Dockerfile
+++ b/src/main/scala/com/knoldus/docker/testdockerfile/Dockerfile
@@ -1,4 +1,4 @@
 FROM ubuntu
-ARG CONT_IMG_VER
-ENV CONT_IMG_VER ${CONT_IMG_VER:-v1.0.0}
-RUN echo $CONT_IMG_VER
+ARG USERNAME
+ENV USERNAME ${USERNAME:-"SoftwareCenter"}
+RUN echo "Hello" $userName
